--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -32,7 +32,7 @@
       
      <% end %>
      <br><br>
-    <%= f.submit "Fertig", class: "btn btn-primary interestbutton" %>
+    <%= f.submit "Fertig", class: "btn btn-primary interestbutton btn-large" %>
   <% end %>
 
 </div>
