--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -182,15 +182,20 @@ margin-bottom: -41px;
 }
 
 .homebase {
-h2 {color: #fff}
 	color: #fff;
 	width: 600px;
 	height: 200px;
-	background: rgba(10,10,10,0.8);
+	background: rgba(10, 10, 10, 0.8);
 	position: absolute;
 	top: 100px;
 	left: 300px;
 	z-index: 200;
+	border: 5px solid rgba(233, 227, 227, 0.86);
+	padding: 10px;
+	h2 {
+		color: #fff
+	}
+	
 }
 
 
