--- a/app/assets/stylesheets/symbol_font.css.scss.erb
+++ b/app/assets/stylesheets/symbol_font.css.scss.erb
@@ -35,7 +35,7 @@
 
 @font-face {
     font-family: 'LigatureSymbols';
-    src: url("LigatureSymbols-2.09.eot");
+    src: url("LigatureSymbols-2.09.eot#");
     src: url("LigatureSymbols-2.09.eot?#iefix") format('embedded-opentype'),
          url("LigatureSymbols-2.09.woff") format('woff'),
          url("LigatureSymbols-2.09.ttf") format('truetype'),
