--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -57,6 +57,20 @@ margin-bottom: 10px;
 
 }
 
+.lsf {
+		font-size: 25px;
+	color: rgb(155, 155, 155);
+}
+
+a[class="lsf"] {
+	font-size: 25px;
+	color: rgb(155, 155, 155);
+	&:hover {
+		color: rgb(51, 51, 51);
+		text-decoration: none;
+	}
+}
+
 
 /* typography */
 h1, h2, h3, h4, h5, h6 {
@@ -78,7 +92,7 @@ color: $grayLight;
 }
 p {
 font-size: 1.1em;
-line-height: 2.7em;
+
 }
 
 .hobby {
@@ -86,7 +100,6 @@ line-height: 2.7em;
 	font-weight: bold;
 	text-align: center;
 	color: $grayLight;
-	margin-bottom: -20px;
 }
 
 .place {
@@ -94,8 +107,6 @@ line-height: 2.7em;
 	font-weight: bold;
 	text-align: right;
 	color: $grayLight;
-	margin-bottom: -10px;
-	padding-right: 190px;
 }
 
 .time {
@@ -142,7 +153,6 @@ line-height: 2.7em;
 }
 
 .banner {
-	margin-top: 105px;
 	width: 64%;
 	float: left;
 }
@@ -169,7 +179,7 @@ line-height: 2.7em;
 }
 
 .buttonbox {
-padding-top: 195px;
+padding-top: 95px;
 	
 }
 
@@ -290,7 +300,7 @@ aside {
 		border-left: 1px solid $grayMediumLight;
 		color: gray;
 		&:first-child {
-			paaind-left: 0;
+			
 			border: 0;
 		}
 		&:hover {
@@ -474,11 +484,72 @@ div[class=ui-select]:nth-child(5), div[class=ui-select]:nth-child(6){
 	margin: 10px 0 0 0;
 
 	li {
-		height: 90px;
-		padding: 30px 28px 110px 30px;
-		border-top: 1px solid hsl(0, 0%, 91%);
+		//border: 1px solid black;
+		//box-shadow: 2px 2px 14px rgba(19, 17, 17, 0.5);
+		min-height: 90px;
+		//padding: 20px;
+		//padding: 30px 28px 20px 30px;
+		margin: 10px 0 40px 0;
 		background-image: url("/assets/paper.jpg");
+		
 		line-height: 29px;
+
+		.paper_up {
+			background: url("/assets/paper_up.jpg") no-repeat;
+			min-height: 10px;
+		}
+
+		.paper_middle {
+			padding: 20px 30px 0 30px;
+			background-image: url("/assets/paper_middle.jpg");
+		}
+
+		.paper_down {
+			padding: 0 0 0 30px;
+			background: url("/assets/paper_down.jpg") no-repeat;
+			min-height: 60px;
+		}
+
+		hr {
+			border-bottom: none;
+			width: 60%;
+		}
+
+		.new_comment textarea{
+			height: 55px;
+			margin: 0 10px 0 0;
+			width: 320px;
+			font-size: 0.8em;
+		}
+
+		.comment {
+			border-radius: 3px;
+			min-height: 36px;
+			position: relative;
+			width: 80%;
+			background-color: rgb(248, 247, 247);;
+			line-height: 12px;
+			font-size: 0.75em;
+			padding: 10px 50px 40px 10px;
+			border: 1px solid rgb(213, 213, 213);
+			margin-bottom: 15px;
+		}
+		.commentnav {
+			position: absolute;
+			top: 1px;
+			left: 95%;
+			line-height: 30px;
+			a {
+				font-size: 1.8em;
+			}
+			
+
+		}
+	}
+
+	.commenform {
+		border: 1px solid black;
+		min-height: 100px;
 	}
 
 	div#remember {
@@ -486,7 +557,7 @@ div[class=ui-select]:nth-child(5), div[class=ui-select]:nth-child(6){
 		input.btn {
 			position: relative;
 			left: 580px;
-			top: -100px;
+			top: 30px;
 		}
 	}
 
@@ -494,11 +565,9 @@ div[class=ui-select]:nth-child(5), div[class=ui-select]:nth-child(6){
 		margin: 0px 0px 0px 0px;
 	}
 
-	div div {
-		height: 10px;
-	}
-}
 
+}
+// FORM MICROPOST
 .micropost {
 	list-style: none;
 	margin: 10px 0 0 0;
@@ -519,9 +588,7 @@ div[class=ui-select]:nth-child(5), div[class=ui-select]:nth-child(6){
 
 .timestamp {
 	color: hsl(0, 0%, 37%);
-	position: relative;
-	bottom: 35px;
-	left: 30px;
+	padding-top: 20px;
 }
 
 .timestamp_details {
@@ -543,9 +610,7 @@ div[class=ui-select]:nth-child(5), div[class=ui-select]:nth-child(6){
 
 .field {
 	color: #FFFFFF;
-	input {
-		color: #000000;
-	}
+
 	clock{
 		color: #5F5F5F;
 	}
