--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -1,4 +1,7 @@
 <li id="<%= feed_item.id %>">
+	<div class="paper_up"></div>
+	<div class="paper_middle">
+	<div>
 	<%= link_to gravatar_for(feed_item.user), feed_item.user %>
 	<span class="user">
 		<%= link_to feed_item.user.name.split[0], feed_item.user %>
@@ -8,19 +11,47 @@
 			<em><%= t('home.micropost.time_on') %> <%= I18n.localize(feed_item.datetime) %></em>
 		<% else %>
 			<div style="color: red;"><%= t('home.micropost.time_till_delete_from_searchindex') + " (in " + time_ago_in_words(feed_item.datetime) + ")"  if ((feed_item.datetime - Time.now) < (60*60*24*7*3)) %></div>
+		<% end %></span>
+
+	<span class="content"><%= truncate(feed_item.content, length: 810) %></span>
+	</div><hr>
+  <% if feed_item.comments.any? %>
+    <div>
+      <%= render feed_item.comments %>
+    </div>
+  <% end %>
+	<div class="commentform">
+		<%= form_for([feed_item, feed_item.comments.build]) do |f| %>
+		  <div class="field">
+		  	<%= gravatar_for(current_user, size: "25") %>
+		    <%= f.text_area :body, placeholder: "Schreibe einen Kommentar..." %>
+			<%= f.hidden_field :return_to, value: request.fullpath, name: :return_to %>
+		    <%= f.submit t('home.micropost.submit'), class: "btn btn-mini" %>
+		  </div>
 		<% end %>
-	<span class="content"><%= truncate(feed_item.content, length: 410) %></span>
-	</li><span class="timestamp">
-		<%= t('feed_item.posted') %> <%= time_ago_in_words(feed_item.created_at) %> <%= t('feed_item.ago') %>.
-	
+	</div>
+</div>
+<div class="paper_down">
+<div class="timestamp">
+	<%= t('feed_item.posted') %> <%= time_ago_in_words(feed_item.created_at) %> <%= t('feed_item.ago') %>.
 	<%= link_to t('link.details'), feed_item, method: :show %> | &nbsp;
 	<% if current_user?(feed_item.user) %>
-		  <%= link_to "trash", feed_item, method: :delete, data: { confirm: "You sure?" }, title: t('link.delete'), class: "lsf", style: "color: #9B9B9B; font-size: 25px;" %>&nbsp;&nbsp;&nbsp;
-		  <span class="lsf" style="color: #C9C9C9; font-size: 25px;">comment</span> <%= feed_item.comments.count %>
-		 <% @unread = feed_item.comments.where("read = ?", false).count %>
-		<b><%= "("+@unread.to_s+")" if (@unread > 0) %></b>
-	<% else %>
-		 <span class="lsf" style="color: #C9C9C9; font-size: 25px;">comment</span> <%= feed_item.comments.count %>
+		  <%= link_to "trash", feed_item, method: :delete, data: { confirm: "You sure?" }, title: t('link.delete'), class: "lsf" %>&nbsp;&nbsp;&nbsp; 
 	<% end %> 
-	
-	 &nbsp;&nbsp;&nbsp;<%= link_to_function "facebook", "postToFeed('#{feed_item.id}', '#{t('home.micropost.'+feed_item.hobby)}', '#{feed_item.place}', '#{I18n.localize(feed_item.datetime)}', '#{feed_item.weekday}'); return false;", class: "lsf", style: "color: #9B9B9B; font-size: 25px;", title: "share on Facebook" %></span>
+	<%= link_to "comment", "#", title: "comment", class: "lsf", id: "commentbutton" %> <%= feed_item.comments.count %>
+	 &nbsp;&nbsp;&nbsp;
+	 <%= link_to_function "facebook", "postToFeed('#{feed_item.id}', '#{t('home.micropost.'+feed_item.hobby)}', '#{feed_item.place}', '#{I18n.localize(feed_item.datetime)}', '#{feed_item.weekday}'); return false;", class: "lsf", title: "share on Facebook" %>
+</div>
+</div>
+</li>
+<script type="text/javascript">
+// $(".commentform").hide();
+
+$(document).ready( function () {
+    $("#commentbutton").click( function (event) {
+        event.preventDefault();
+        $(this).siblings("div[.commentform]").slideToggle();
+        
+    });
+});
+</script>
