--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -471,11 +471,14 @@ $('#togg').tooltip('toggle');
 <% if (@not_logged_in) %><h1>Connectify</h1>
   <p> We're sorry, but you must be logged in to write a Micropost.</p>
 <% end %>
- <div class="span12" style="background: url('/assets/shut_climbing.jpg') no-repeat right top; height: 600px;">
+ <div class="span12" style="background: url('/assets/shut_climbing.jpg') no-repeat right top;">
 
  <div class="span6">
   <div class="banner span6"><%= image_tag "connectify9.png" %></div>
+  
   <div class='buttonbox'><p class="lead" style="font-size: 1.2em; position: relative; top: -19px;"><%= t('home.findasportpartner') %></p>
+    <div class="alert clearfix"><b>ACHTUNG!!!</b> Es gibt zur Zeit ein Problem mit der Domain: http://connectify.de und http://www.connectify.de. <br>Solltest du von dort kommen (schau einfach in die Adressleiste deines Browsers) nutze bitte folgenden Link, damit die Anmeldung funktioniert: <%= link_to "Connectify (Server)", "http://connectify.herokuapp.com" %><br>
+    Der Umzug zu einem anderen Domainverwalter, wird leider ein paar Tage dauern.</div>
     <span class="lead"><%= image_tag "facebook2.png", title: "Connect with Facebook", width: "31px" %>
     <%= link_to t('home.connectme'), "/auth/facebook", id: "sign_in", class: "btn btn-large btn-success" %> <%= t('home.or') %>
     <%= link_to t('home.tourstart'), "#", id: "tourstart", class: "btn btn-large btn-warning" %></span>
