lonk to heroku blank target

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -477,7 +477,7 @@ $('#togg').tooltip('toggle');
   <div class="banner span6"><%= image_tag "connectify9.png" %></div>
   
   <div class='buttonbox'><p class="lead" style="font-size: 1.2em; position: relative; top: -19px;"><%= t('home.findasportpartner') %></p>
-    <div class="alert clearfix"><b>ACHTUNG!!!</b> Es gibt zur Zeit ein Problem mit der Domain: http://connectify.de und http://www.connectify.de. <br>Solltest du von dort kommen (schau einfach in die Adressleiste deines Browsers) nutze bitte folgenden Link, damit die Anmeldung funktioniert: <%= link_to "Connectify (Server)", "http://connectify.herokuapp.com" %><br>
+    <div class="alert clearfix"><b>ACHTUNG!!!</b> Es gibt zur Zeit ein Problem mit der Domain: http://connectify.de und http://www.connectify.de. <br>Solltest du von dort kommen (schau einfach in die Adressleiste deines Browsers) nutze bitte folgenden Link, damit die Anmeldung funktioniert: <%= link_to "Connectify (Server)", "http://connectify.herokuapp.com", :target => '_blank'  %><br>
     Der Umzug zu einem anderen Domainverwalter, wird leider ein paar Tage dauern.</div>
     <span class="lead"><%= image_tag "facebook2.png", title: "Connect with Facebook", width: "31px" %>
     <%= link_to t('home.connectme'), "/auth/facebook", id: "sign_in", class: "btn btn-large btn-success" %> <%= t('home.or') %>
