--- a/app/assets/stylesheets/symbol_font.css.scss.erb
+++ b/app/assets/stylesheets/symbol_font.css.scss.erb
@@ -35,12 +35,12 @@
 
 @font-face {
     font-family: 'LigatureSymbols';
-    src: url("LigatureSymbols-2.09.eot#");
-    src: url("LigatureSymbols-2.09.eot?#iefix") format('embedded-opentype'),
-         url("LigatureSymbols-2.09.woff") format('woff'),
-         url("LigatureSymbols-2.09.ttf") format('truetype'),
-         url("LigatureSymbols-2.09.svg#LigatureSymbols") format('svg');
-    src: url("LigatureSymbols-2.09.ttf") format('truetype');
+    src: url('LigatureSymbols-2.09.eot#');
+    src: url('LigatureSymbols-2.09.eot?#iefix') format('embedded-opentype'),
+         url('LigatureSymbols-2.09.woff') format('woff'),
+         url('LigatureSymbols-2.09.ttf') format('truetype'),
+         url('LigatureSymbols-2.09.svg#LigatureSymbols') format('svg');
+    src: url('LigatureSymbols-2.09.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
